ridding unwanted code

--- a/Slugging.ipynb
+++ b/Slugging.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
        "[108789 rows x 22 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,25 +1790,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # mean_rows = ['year', 'AB', 'H']\n",
-    "# avg_ba = [None] * 150\n",
-    "# # avg_ba\n",
-    "# yr_ct = 0\n",
-    "# add_ab = 0\n",
-    "# add_h = 0\n",
-    "# yr_counter = 0\n",
+    "# mean_rows = ['year', 'AB', 'H']\n",
+    "avg_ba = [None] * 150\n",
+    "# avg_ba\n",
+    "yr_ct = 0\n",
+    "add_ab = 0\n",
+    "add_h = 0\n",
+    "yr_counter = 0\n",
     "\n",
     "# for a in slugarr:\n",
-    "#     if a[1] == yr:\n",
-    "#         yr_ct += 1\n",
-    "#         add_ab += a[6]\n",
-    "#         print(a[1])\n",
-    "#     else:\n",
-    "#         avg_ba[yr_counter] = add\n",
-    "#         yr += 1\n",
-    "#         yr_ct = 0\n",
-    "#         add_ab = 0\n",
-    "#         add_h = 0\n",
+    "    \n",
     "\n",
     "\n",
     "# print(year_ba)"
