--- a/matchup_sims.ipynb
+++ b/matchup_sims.ipynb
@@ -58,10 +58,13 @@
     "        \n",
     "        # Added hit types (if possible): chopper, in-field fly, line drive, deep, home run\n",
     "        # Add data visualization (if possible) based on when batter successfully hit at what count\n",
+    "        # Always update the number of if statements and pitches' types\n",
     "        pitch = np.random.choice(a=['fastball', 'curve', 'change', 'four-seam', 'splitter'], p=pitch_probs)\n",
     "        swing = np.random.choice(a=['yes', 'no'], p=[count_swing_prob, 1 - count_swing_prob])\n",
     "        # pitch /= pitch.sum(pitch) \n",
     "\n",
+    "\n",
+    "        # If statement for fastball pitched and/or if batter swung and hit the ball\n",
     "        if pitch == 'fastball':\n",
     "            hit_prob = (count_surrender_prob + fastball_surrender_prob + count_hit_prob + fastball_hit_prob) / 4\n",
     "            if swing == 'yes':\n",
@@ -70,6 +73,7 @@
     "                outcome = 'no_hit'\n",
     "            df = df.append(pd.DataFrame({'count': count, 'pitch': 'fastball', 'swing': swing, 'result': [outcome]}))\n",
     "\n",
+    "        # If statement for curveball pitched and/or if batter swung and hit the ball\n",
     "        elif pitch == 'curve':\n",
     "            hit_prob = (count_surrender_prob + curve_surrender_prob + count_hit_prob + curve_hit_prob) / 4\n",
     "            if swing == 'yes':\n",
@@ -78,6 +82,7 @@
     "                outcome = 'no_hit'\n",
     "            df = df.append(pd.DataFrame({'count': count, 'pitch': 'curve', 'swing': swing, 'result': [outcome]}))\n",
     "\n",
+    "        # If statement for changeup pitched and/or if batter swung and hit the ball\n",
     "        elif pitch == 'change':\n",
     "            hit_prob = (count_surrender_prob + change_surrender_prob + count_hit_prob + change_hit_prob) / 4\n",
     "            if swing == 'yes':\n",
@@ -86,6 +91,8 @@
     "                outcome = 'no_hit'\n",
     "            df = df.append(pd.DataFrame({'count': count, 'pitch': 'change', 'swing': swing, 'result': [outcome]}))\n",
     "\n",
+    "\n",
+    "        # If statement for four-seam fastball pitched and/or if batter swung and hit the ball\n",
     "        elif pitch == 'four-seam':\n",
     "            hit_prob = (count_surrender_prob + change_surrender_prob + count_hit_prob + change_hit_prob) / 4\n",
     "            if swing == 'yes':\n",
@@ -94,6 +101,7 @@
     "                outcome = 'no_hit'\n",
     "            df = df.append(pd.DataFrame({'count': count, 'pitch': 'four-seam', 'swing': swing, 'result': [outcome]}))\n",
     "\n",
+    "        # If statement for splitter pitched and/or if batter swung and hit the ball\n",
     "        elif pitch == 'splitter':\n",
     "            hit_prob = (count_surrender_prob + change_surrender_prob + count_hit_prob + change_hit_prob) / 4\n",
     "            if swing == 'yes':\n",
@@ -106,6 +114,7 @@
     "\n",
     "    at_bat_results = pd.DataFrame()\n",
     "\n",
+    "    # Pitch simulation begins with 0-0 count for the player at bat\n",
     "    at_bat_results = run_pitch_simulation(count='0-0',\n",
     "                                          count_swing_prob=zero_zero_swing_prob,\n",
     "                                          pitch_probs=zero_zero_pitch_probs,\n",
