--- a/Slug_Datavis.ipynb
+++ b/Slug_Datavis.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
        "max        67.000000     19.000000     36.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -863,6 +863,92 @@
     "plt.title(\"Home Runs Hit in MLB, 1871-2020\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([['abercda01', 1871, 1, ..., nan, nan, 0.0],\n",
+       "       ['addybo01', 1871, 1, ..., nan, nan, 0.0],\n",
+       "       ['allisar01', 1871, 1, ..., nan, nan, 1.0],\n",
+       "       ...,\n",
+       "       ['zimmeky01', 2020, 1, ..., 0.0, 0.0, 0.0],\n",
+       "       ['zuberty01', 2020, 1, ..., 0.0, 0.0, 0.0],\n",
+       "       ['zuninmi01', 2020, 1, ..., 0.0, 0.0, 0.0]], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batstats_arr = batstats.to_numpy()\n",
+    "batstats_arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['crawfbr01' 2011 1 'SFN' 'NL' 66 196 22 40 5 2 3 21.0 1.0 3.0 23 31.0 1.0\n",
+      " 0.0 1.0 0.0 4.0]\n",
+      "['crawfbr01' 2012 1 'SFN' 'NL' 143 435 44 108 26 3 4 45.0 1.0 4.0 33 95.0\n",
+      " 6.0 3.0 2.0 3.0 4.0]\n",
+      "['crawfbr01' 2013 1 'SFN' 'NL' 149 499 52 124 24 3 9 43.0 1.0 2.0 42 96.0\n",
+      " 6.0 5.0 1.0 3.0 10.0]\n",
+      "['crawfbr01' 2014 1 'SFN' 'NL' 153 491 54 121 20 10 10 69.0 5.0 3.0 59\n",
+      " 129.0 10.0 2.0 2.0 10.0 4.0]\n",
+      "['crawfbr01' 2015 1 'SFN' 'NL' 143 507 65 130 33 4 21 84.0 6.0 4.0 39\n",
+      " 119.0 9.0 11.0 0.0 4.0 18.0]\n",
+      "['crawfbr01' 2016 1 'SFN' 'NL' 155 553 67 152 28 11 12 84.0 7.0 0.0 57\n",
+      " 115.0 10.0 4.0 0.0 9.0 13.0]\n",
+      "['crawfbr01' 2017 1 'SFN' 'NL' 144 518 58 131 34 1 14 77.0 3.0 5.0 42\n",
+      " 113.0 3.0 1.0 0.0 9.0 18.0]\n",
+      "['crawfbr01' 2018 1 'SFN' 'NL' 151 531 63 135 28 2 14 54.0 4.0 5.0 50\n",
+      " 122.0 13.0 8.0 0.0 5.0 12.0]\n",
+      "['crawfbr01' 2019 1 'SFN' 'NL' 147 500 58 114 24 2 11 59.0 3.0 2.0 53\n",
+      " 117.0 5.0 3.0 0.0 4.0 10.0]\n",
+      "['crawfbr01' 2020 1 'SFN' 'NL' 54 172 26 44 12 0 8 28.0 1.0 2.0 15 47.0\n",
+      " 2.0 4.0 0.0 2.0 3.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in batstats_arr:\n",
+    "    if a[0] == 'crawfbr01':\n",
+    "        print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
