--- a/Pitching.ipynb
+++ b/Pitching.ipynb
@@ -379,6 +379,401 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         7.96\n",
+       "1         4.50\n",
+       "2        27.00\n",
+       "3         4.35\n",
+       "4        10.00\n",
+       "         ...  \n",
+       "48394     1.59\n",
+       "48395     7.71\n",
+       "48396     7.94\n",
+       "48397     1.57\n",
+       "48398     4.09\n",
+       "Name: ERA, Length: 48399, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitch_stats.ERA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['playerID', 'yearID', 'stint', 'teamID', 'lgID', 'W', 'L', 'G', 'GS',\n",
+       "       'CG', 'SHO', 'SV', 'IPouts', 'H', 'ER', 'HR', 'BB', 'SO', 'BAOpp',\n",
+       "       'ERA', 'IBB', 'WP', 'HBP', 'BK', 'BFP', 'GF', 'R', 'SH', 'SF', 'GIDP'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitch_stats.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         2\n",
+       "1        30\n",
+       "2         0\n",
+       "3        22\n",
+       "4         1\n",
+       "         ..\n",
+       "48394     0\n",
+       "48395     0\n",
+       "48396     0\n",
+       "48397     0\n",
+       "48398     0\n",
+       "Name: CG, Length: 48399, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitch_stats.CG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>yearID</th>\n",
+       "      <th>stint</th>\n",
+       "      <th>W</th>\n",
+       "      <th>L</th>\n",
+       "      <th>G</th>\n",
+       "      <th>GS</th>\n",
+       "      <th>CG</th>\n",
+       "      <th>SHO</th>\n",
+       "      <th>SV</th>\n",
+       "      <th>IPouts</th>\n",
+       "      <th>...</th>\n",
+       "      <th>IBB</th>\n",
+       "      <th>WP</th>\n",
+       "      <th>HBP</th>\n",
+       "      <th>BK</th>\n",
+       "      <th>BFP</th>\n",
+       "      <th>GF</th>\n",
+       "      <th>R</th>\n",
+       "      <th>SH</th>\n",
+       "      <th>SF</th>\n",
+       "      <th>GIDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>33821.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>47665.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48396.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>48399.000000</td>\n",
+       "      <td>29212.000000</td>\n",
+       "      <td>29212.000000</td>\n",
+       "      <td>28081.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>1972.196781</td>\n",
+       "      <td>1.081035</td>\n",
+       "      <td>4.550073</td>\n",
+       "      <td>4.550073</td>\n",
+       "      <td>23.470754</td>\n",
+       "      <td>9.151181</td>\n",
+       "      <td>2.931280</td>\n",
+       "      <td>0.418500</td>\n",
+       "      <td>1.481539</td>\n",
+       "      <td>244.894895</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.251234</td>\n",
+       "      <td>2.575322</td>\n",
+       "      <td>2.357957</td>\n",
+       "      <td>0.292609</td>\n",
+       "      <td>349.414807</td>\n",
+       "      <td>6.216430</td>\n",
+       "      <td>41.544929</td>\n",
+       "      <td>2.660003</td>\n",
+       "      <td>2.141106</td>\n",
+       "      <td>5.753641</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>38.408926</td>\n",
+       "      <td>0.287923</td>\n",
+       "      <td>5.707027</td>\n",
+       "      <td>4.913383</td>\n",
+       "      <td>18.532130</td>\n",
+       "      <td>12.129555</td>\n",
+       "      <td>6.873115</td>\n",
+       "      <td>1.076348</td>\n",
+       "      <td>4.968260</td>\n",
+       "      <td>252.987651</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.703067</td>\n",
+       "      <td>3.659715</td>\n",
+       "      <td>3.136546</td>\n",
+       "      <td>0.740074</td>\n",
+       "      <td>354.282289</td>\n",
+       "      <td>9.864816</td>\n",
+       "      <td>42.499043</td>\n",
+       "      <td>3.237716</td>\n",
+       "      <td>2.345834</td>\n",
+       "      <td>6.287859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1871.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1945.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1983.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>21.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>158.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>229.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2005.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>375.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>538.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2020.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>48.000000</td>\n",
+       "      <td>106.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>62.000000</td>\n",
+       "      <td>2040.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>23.000000</td>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>54.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>2906.000000</td>\n",
+       "      <td>84.000000</td>\n",
+       "      <td>519.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>47.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             yearID         stint             W             L             G  \\\n",
+       "count  48399.000000  48399.000000  48399.000000  48399.000000  48399.000000   \n",
+       "mean    1972.196781      1.081035      4.550073      4.550073     23.470754   \n",
+       "std       38.408926      0.287923      5.707027      4.913383     18.532130   \n",
+       "min     1871.000000      1.000000      0.000000      0.000000      1.000000   \n",
+       "25%     1945.000000      1.000000      0.000000      1.000000      7.000000   \n",
+       "50%     1983.000000      1.000000      2.000000      3.000000     21.000000   \n",
+       "75%     2005.000000      1.000000      7.000000      7.000000     35.000000   \n",
+       "max     2020.000000      5.000000     60.000000     48.000000    106.000000   \n",
+       "\n",
+       "                 GS            CG           SHO            SV        IPouts  \\\n",
+       "count  48399.000000  48399.000000  48399.000000  48399.000000  48399.000000   \n",
+       "mean       9.151181      2.931280      0.418500      1.481539    244.894895   \n",
+       "std       12.129555      6.873115      1.076348      4.968260    252.987651   \n",
+       "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%        0.000000      0.000000      0.000000      0.000000     47.000000   \n",
+       "50%        2.000000      0.000000      0.000000      0.000000    158.000000   \n",
+       "75%       16.000000      2.000000      0.000000      1.000000    375.000000   \n",
+       "max       75.000000     75.000000     16.000000     62.000000   2040.000000   \n",
+       "\n",
+       "       ...           IBB            WP           HBP            BK  \\\n",
+       "count  ...  33821.000000  48399.000000  47665.000000  48399.000000   \n",
+       "mean   ...      2.251234      2.575322      2.357957      0.292609   \n",
+       "std    ...      2.703067      3.659715      3.136546      0.740074   \n",
+       "min    ...      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%    ...      0.000000      0.000000      0.000000      0.000000   \n",
+       "50%    ...      1.000000      1.000000      1.000000      0.000000   \n",
+       "75%    ...      3.000000      4.000000      3.000000      0.000000   \n",
+       "max    ...     23.000000     83.000000     54.000000     16.000000   \n",
+       "\n",
+       "                BFP            GF             R            SH            SF  \\\n",
+       "count  48396.000000  48399.000000  48399.000000  29212.000000  29212.000000   \n",
+       "mean     349.414807      6.216430     41.544929      2.660003      2.141106   \n",
+       "std      354.282289      9.864816     42.499043      3.237716      2.345834   \n",
+       "min        0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+       "25%       71.000000      0.000000     10.000000      0.000000      0.000000   \n",
+       "50%      229.000000      3.000000     27.000000      1.000000      1.000000   \n",
+       "75%      538.000000      8.000000     65.000000      4.000000      3.000000   \n",
+       "max     2906.000000     84.000000    519.000000     27.000000     17.000000   \n",
+       "\n",
+       "               GIDP  \n",
+       "count  28081.000000  \n",
+       "mean       5.753641  \n",
+       "std        6.287859  \n",
+       "min        0.000000  \n",
+       "25%        1.000000  \n",
+       "50%        4.000000  \n",
+       "75%        8.000000  \n",
+       "max       47.000000  \n",
+       "\n",
+       "[8 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pitch_stats.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
