--- a/Slug_Datavis.ipynb
+++ b/Slug_Datavis.ipynb
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,34 +116,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([['abercda01', 1871, 1, ..., nan, nan, 0.0],\n",
-       "       ['addybo01', 1871, 1, ..., nan, nan, 0.0],\n",
-       "       ['allisar01', 1871, 1, ..., nan, nan, 1.0],\n",
-       "       ...,\n",
-       "       ['zimmeky01', 2020, 1, ..., 0.0, 0.0, 0.0],\n",
-       "       ['zuberty01', 2020, 1, ..., 0.0, 0.0, 0.0],\n",
-       "       ['zuninmi01', 2020, 1, ..., 0.0, 0.0, 0.0]], dtype=object)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "batstats_arr = batstats.to_numpy()\n",
-    "batstats_arr"
+    "# batstats_arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +877,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,38 +966,67 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "15.25"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean:\n",
+      "HR: 15.25 \n",
+      "Doubles: 20.25 \n",
+      "Triples: 3.4375 \n",
+      "RBIs: 58.875 \n",
+      "Hits: 111.9375 \n",
+      "Singles: 73.0\n"
+     ]
     }
    ],
    "source": [
-    "pencehu_stats.HR.mean()"
+    "print(\"Mean:\\nHR:\", pencehu_stats.HR.mean(), \"\\nDoubles:\", pencehu_stats['2B'].mean(), \"\\nTriples:\", pencehu_stats['3B'].mean(),\n",
+    "\"\\nRBIs:\", pencehu_stats['RBI'].mean(), \"\\nHits:\", pencehu_stats['H'].mean(), \"\\nSingles:\", \n",
+    "(pencehu_stats['H'].mean()- (pencehu_stats['2B'].mean() + pencehu_stats['3B'].mean() + pencehu_stats['HR'].mean())))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20.25"
+       "0     False\n",
+       "1     False\n",
+       "2     False\n",
+       "3     False\n",
+       "4      True\n",
+       "5      True\n",
+       "6     False\n",
+       "7     False\n",
+       "8     False\n",
+       "9     False\n",
+       "10    False\n",
+       "11    False\n",
+       "12    False\n",
+       "13    False\n",
+       "14    False\n",
+       "15    False\n",
+       "Name: yearID, dtype: bool"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pencehu_stats['2B'].mean()"
+    "pencehu_stats.yearID == 2011\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pence played for two different teams in 2012: PHI, SF <br>\n",
+    "Combine the stats from both teams Pence played in. "
    ]
   },
   {
@@ -1025,7 +1037,7 @@
     {
      "data": {
       "text/plain": [
-       "3.4375"
+       "16"
       ]
      },
      "execution_count": 21,
@@ -1034,28 +1046,23 @@
     }
    ],
    "source": [
-    "pencehu_stats['3B'].mean()"
+    "penceh_arr = pencehu_stats.H.to_numpy()\n",
+    "len(penceh_arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "58.875"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pencehu_stats['RBI'].mean()"
-   ]
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
