trying new things

--- a/Slug_Datavis.ipynb
+++ b/Slug_Datavis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "[16 rows x 22 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "max     1.0000   5.000000  25.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
        "Name: yearID, dtype: bool"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,16 +1022,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     False\n",
+       "1     False\n",
+       "2     False\n",
+       "3     False\n",
+       "4     False\n",
+       "5     False\n",
+       "6      True\n",
+       "7      True\n",
+       "8     False\n",
+       "9     False\n",
+       "10    False\n",
+       "11    False\n",
+       "12    False\n",
+       "13    False\n",
+       "14    False\n",
+       "15    False\n",
+       "Name: yearID, dtype: bool"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pencehu_stats.yearID == 2012"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pence played for two different teams in 2012: PHI, SF <br>\n",
+    "Pence played for two different teams in 2011 (HOU-->PHI) and 2012 (PHI-->SF) <br>\n",
     "Combine the stats from both teams Pence played in. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1040,22 +1076,31 @@
        "16"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "penceh_arr = pencehu_stats.H.to_numpy()\n",
-    "len(penceh_arr)"
+    "len(penceh_arr)\n",
+    "# penceh_arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "new_pencearr = [None] * 14\n",
+    "count = 0\n",
+    "# for b in range(0, len(penceh_arr)):\n",
+    "#     for a in penceh_arr:\n",
+    "#         new_pencearr[count] = a\n",
+    "#         count+=1\n",
+    "# new_pencearr"
+   ]
   },
   {
    "cell_type": "code",
