--- a/Slug_Datavis.ipynb
+++ b/Slug_Datavis.ipynb
@@ -2271,6 +2271,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that each of these visualizations took a dip in the 2020 season. This was expected because of the COVID-19 pandemic, where MLB scheduled a 60-game regular season for all 30 teams that year. This is significantly different from seasons such as 1994-95, where there was an MLB strike, or the 1981 strike which saw a split-season format, and much more different from the 162-game regular season. \n",
+    "\n",
+    "Thus, Bryant's numbers that year were expected to drop because of this."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
