Added Koufax stats

--- a/Pitching.ipynb
+++ b/Pitching.ipynb
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1290,7 @@
        "[13 rows x 30 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1354,6 +1354,451 @@
     "plt.ylabel(\"Win Percentage\")\n",
     "plt.title(\"Max Scherzer Win Percentage by Season, 2008-2020\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scherzer_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['koufasa01' 1955 1 'BRO' 'NL' 2 2 12 5 2 2 0 125 33 14 2 28 30 0.21 3.02\n",
+      " 1.0 2 1.0 1 183.0 4 15 nan nan nan]\n",
+      "['koufasa01' 1956 1 'BRO' 'NL' 2 4 16 10 0 0 0 176 66 32 10 29 30 0.28\n",
+      " 4.91 0.0 1 0.0 2 261.0 1 37 nan nan nan]\n",
+      "['koufasa01' 1957 1 'BRO' 'NL' 5 4 34 13 2 0 0 313 83 45 14 51 122 0.21\n",
+      " 3.88 1.0 5 2.0 0 444.0 12 49 nan nan nan]\n",
+      "['koufasa01' 1958 1 'LAN' 'NL' 11 11 40 26 5 0 1 476 132 79 19 105 131\n",
+      " 0.22 4.48 6.0 17 1.0 0 714.0 7 89 nan nan nan]\n",
+      "['koufasa01' 1959 1 'LAN' 'NL' 8 6 35 23 6 1 2 460 136 69 23 92 173 0.23\n",
+      " 4.05 4.0 5 0.0 1 679.0 6 74 nan nan nan]\n",
+      "['koufasa01' 1960 1 'LAN' 'NL' 8 13 37 26 7 2 1 525 133 76 20 100 197 0.2\n",
+      " 3.91 6.0 9 1.0 0 753.0 7 83 nan nan nan]\n",
+      "['koufasa01' 1961 1 'LAN' 'NL' 18 13 42 35 15 2 1 767 212 100 27 96 269\n",
+      " 0.22 3.52 6.0 12 3.0 2 1068.0 2 117 nan nan nan]\n",
+      "['koufasa01' 1962 1 'LAN' 'NL' 14 7 28 26 11 2 1 553 134 52 13 57 216 0.19\n",
+      " 2.54 4.0 3 2.0 0 744.0 2 61 nan nan nan]\n",
+      "['koufasa01' 1963 1 'LAN' 'NL' 25 5 40 40 20 11 0 933 214 65 18 58 306\n",
+      " 0.18 1.88 7.0 6 3.0 1 1210.0 0 68 nan nan nan]\n",
+      "['koufasa01' 1964 1 'LAN' 'NL' 19 5 29 28 15 7 1 669 154 43 13 53 223 0.19\n",
+      " 1.74 5.0 9 0.0 0 870.0 1 49 nan nan nan]\n",
+      "['koufasa01' 1965 1 'LAN' 'NL' 26 8 43 41 27 8 2 1007 216 76 26 71 382\n",
+      " 0.17 2.04 4.0 11 5.0 0 1297.0 2 90 nan nan nan]\n",
+      "['koufasa01' 1966 1 'LAN' 'NL' 27 9 41 41 27 5 0 969 241 62 19 77 317 0.2\n",
+      " 1.73 4.0 7 0.0 0 1274.0 0 74 nan nan nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sandy Koufax numbers - koufasa01\n",
+    "\n",
+    "koufax_stats = pd.DataFrame(columns=['playerID', 'yearID', 'stint', 'teamID', 'lgID', 'W', 'L', 'G', 'GS',\n",
+    "       'CG', 'SHO', 'SV', 'IPouts', 'H', 'ER', 'HR', 'BB', 'SO', 'BAOpp',\n",
+    "       'ERA', 'IBB', 'WP', 'HBP', 'BK', 'BFP', 'GF', 'R', 'SH', 'SF', 'GIDP'])\n",
+    "counter = 0\n",
+    "\n",
+    "\n",
+    "for a in pitcher_arr:\n",
+    "    if a[0] == 'koufasa01':\n",
+    "        koufax_stats.loc[counter] = a\n",
+    "        print(a)\n",
+    "        counter += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>playerID</th>\n",
+       "      <th>yearID</th>\n",
+       "      <th>stint</th>\n",
+       "      <th>teamID</th>\n",
+       "      <th>lgID</th>\n",
+       "      <th>W</th>\n",
+       "      <th>L</th>\n",
+       "      <th>G</th>\n",
+       "      <th>GS</th>\n",
+       "      <th>CG</th>\n",
+       "      <th>...</th>\n",
+       "      <th>IBB</th>\n",
+       "      <th>WP</th>\n",
+       "      <th>HBP</th>\n",
+       "      <th>BK</th>\n",
+       "      <th>BFP</th>\n",
+       "      <th>GF</th>\n",
+       "      <th>R</th>\n",
+       "      <th>SH</th>\n",
+       "      <th>SF</th>\n",
+       "      <th>GIDP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1955</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BRO</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1956</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BRO</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>261.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>37</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1957</td>\n",
+       "      <td>1</td>\n",
+       "      <td>BRO</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>34</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>444.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>49</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>40</td>\n",
+       "      <td>26</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>714.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>89</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>35</td>\n",
+       "      <td>23</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>679.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>74</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>8</td>\n",
+       "      <td>13</td>\n",
+       "      <td>37</td>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>753.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>83</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>18</td>\n",
+       "      <td>13</td>\n",
+       "      <td>42</td>\n",
+       "      <td>35</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1068.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>117</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>28</td>\n",
+       "      <td>26</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>744.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>61</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>25</td>\n",
+       "      <td>5</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1210.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>68</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1964</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "      <td>29</td>\n",
+       "      <td>28</td>\n",
+       "      <td>15</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>870.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>26</td>\n",
+       "      <td>8</td>\n",
+       "      <td>43</td>\n",
+       "      <td>41</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1297.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>90</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>koufasa01</td>\n",
+       "      <td>1966</td>\n",
+       "      <td>1</td>\n",
+       "      <td>LAN</td>\n",
+       "      <td>NL</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "      <td>41</td>\n",
+       "      <td>41</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1274.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>74</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     playerID yearID stint teamID lgID   W   L   G  GS  CG  ...  IBB  WP  HBP  \\\n",
+       "0   koufasa01   1955     1    BRO   NL   2   2  12   5   2  ...  1.0   2  1.0   \n",
+       "1   koufasa01   1956     1    BRO   NL   2   4  16  10   0  ...  0.0   1  0.0   \n",
+       "2   koufasa01   1957     1    BRO   NL   5   4  34  13   2  ...  1.0   5  2.0   \n",
+       "3   koufasa01   1958     1    LAN   NL  11  11  40  26   5  ...  6.0  17  1.0   \n",
+       "4   koufasa01   1959     1    LAN   NL   8   6  35  23   6  ...  4.0   5  0.0   \n",
+       "5   koufasa01   1960     1    LAN   NL   8  13  37  26   7  ...  6.0   9  1.0   \n",
+       "6   koufasa01   1961     1    LAN   NL  18  13  42  35  15  ...  6.0  12  3.0   \n",
+       "7   koufasa01   1962     1    LAN   NL  14   7  28  26  11  ...  4.0   3  2.0   \n",
+       "8   koufasa01   1963     1    LAN   NL  25   5  40  40  20  ...  7.0   6  3.0   \n",
+       "9   koufasa01   1964     1    LAN   NL  19   5  29  28  15  ...  5.0   9  0.0   \n",
+       "10  koufasa01   1965     1    LAN   NL  26   8  43  41  27  ...  4.0  11  5.0   \n",
+       "11  koufasa01   1966     1    LAN   NL  27   9  41  41  27  ...  4.0   7  0.0   \n",
+       "\n",
+       "   BK     BFP  GF    R  SH  SF  GIDP  \n",
+       "0   1   183.0   4   15 NaN NaN   NaN  \n",
+       "1   2   261.0   1   37 NaN NaN   NaN  \n",
+       "2   0   444.0  12   49 NaN NaN   NaN  \n",
+       "3   0   714.0   7   89 NaN NaN   NaN  \n",
+       "4   1   679.0   6   74 NaN NaN   NaN  \n",
+       "5   0   753.0   7   83 NaN NaN   NaN  \n",
+       "6   2  1068.0   2  117 NaN NaN   NaN  \n",
+       "7   0   744.0   2   61 NaN NaN   NaN  \n",
+       "8   1  1210.0   0   68 NaN NaN   NaN  \n",
+       "9   0   870.0   1   49 NaN NaN   NaN  \n",
+       "10  0  1297.0   2   90 NaN NaN   NaN  \n",
+       "11  0  1274.0   0   74 NaN NaN   NaN  \n",
+       "\n",
+       "[12 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "koufax_stats"
    ]
   },
   {
